// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated Codex config snapshots (§21.1) > from-scratch install writes the canonical notify + hooks block 1`] = `
"notify = [ "birdybeep", "hook", "codex" ]

[[hooks.SessionStart]]
matcher = ""

[[hooks.SessionStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.PermissionRequest]]
matcher = ""

[[hooks.PermissionRequest.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.PostToolUse]]
matcher = ""

[[hooks.PostToolUse.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SubagentStart]]
matcher = ""

[[hooks.SubagentStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SubagentStop]]
matcher = ""

[[hooks.SubagentStop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10
"
`;

exports[`generated Codex config snapshots (§21.1) > overwrites a user's single-valued notify (reversible) and preserves other keys 1`] = `
"notify = [ "birdybeep", "hook", "codex" ]
model = "gpt-5"

[tui]
theme = "dark"

[[hooks.SessionStart]]
matcher = ""

[[hooks.SessionStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.PermissionRequest]]
matcher = ""

[[hooks.PermissionRequest.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.PostToolUse]]
matcher = ""

[[hooks.PostToolUse.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SubagentStart]]
matcher = ""

[[hooks.SubagentStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SubagentStop]]
matcher = ""

[[hooks.SubagentStop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10
"
`;

exports[`generated Codex config snapshots (§21.1) > patches into a config with a same-event user PostToolUse hook + other keys 1`] = `
"model = "o3"
approval_policy = "on-request"
notify = [ "birdybeep", "hook", "codex" ]

[sandbox]
mode = "workspace-write"

[[hooks.PostToolUse]]
matcher = "Bash"

[[hooks.PostToolUse.hooks]]
type = "command"
command = "my-own-codex-hook"

[[hooks.PostToolUse]]
matcher = ""

[[hooks.PostToolUse.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SessionStart]]
matcher = ""

[[hooks.SessionStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.PermissionRequest]]
matcher = ""

[[hooks.PermissionRequest.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SubagentStart]]
matcher = ""

[[hooks.SubagentStart.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10

[[hooks.SubagentStop]]
matcher = ""

[[hooks.SubagentStop.hooks]]
type = "command"
command = "birdybeep hook codex"
timeout = 10
"
`;
